A09.社群工具(social widget) 含加入常用

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
@@ -1,6 +1,14 @@
 ﻿@using Feature.Wealth.Account.Helpers;
-@if (FcbMemberHelper.CheckMemberLogin())
+@{
+    var isLogin = FcbMemberHelper.CheckMemberLogin();
+}
+@if (isLogin)
 {
+    <script>
+       addObjectValue(SC_DATA, 'IsLoggedIn', @(isLogin ? "true" : "false"));
+       addObjectValue(SC_DATA, 'ItemId', '@Sitecore.Context.Item.ID');
+    </script>
+
     Html.RenderPartial("~/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml");
 }
 else
