--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/_EtfSearchResult.cshtml
@@ -401,15 +401,15 @@
             <table id="table" class="c-table@dt-only c-cardTable@lt">
                 <colgroup>
                     <col style="width: auto;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
-                    <col style="width: 1;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
+                    <col style="width: 1%;">
                 </colgroup>
                 <thead>
                     <tr class="u-nowrap">
