--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleCardList/ArticleCardList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleCardList/ArticleCardList.cshtml
@@ -22,60 +22,60 @@
 
                 @foreach (var item in Model.CardList)
                 {
-                    <div class="l-flex__item" targetItemId="@item.TargetItemID">
+                    <div class="l-flex__item">
 
-                        @Html.Sitecore().BeginField(Templates.ArticleCardItem.Fields.Link.ToString(), item.Item, new { haschildren = true, @class = "c-box c-box--gapless u-shadow-animation" })
-                        <div class="c-box c-box--gapless u-shadow-animation">
-                            <div class="c-gridview c-gridview--list">
+                        <a href="@item.Link" class="c-box c-box--gapless u-shadow-animation" target="@item.LinkTarget" title="@item.LinkTitle">
+                            <div class="c-box c-box--gapless u-shadow-animation">
+                                <div class="c-gridview c-gridview--list">
 
-                                @if (!string.IsNullOrEmpty(item.PCImage) && !string.IsNullOrEmpty(item.MobileImage))
-                                {
-                                    <div class="c-gridview__media">
-                                        <picture>
-                                            <source media="(min-width: 1200px)" srcset="@item.PCImage" />
-                                            <source media="(max-width: 1199px)" srcset="@item.MobileImage" />
-                                            <img src="@item.PCImage" class="c-gridview__img" alt="">
-                                        </picture>
-                                    </div>
-                                }
+                                    @if (!string.IsNullOrEmpty(item.PCImage) && !string.IsNullOrEmpty(item.MobileImage))
+                                    {
+                                        <div class="c-gridview__media">
+                                            <picture>
+                                                <source media="(min-width: 1200px)" srcset="@item.PCImage" />
+                                                <source media="(max-width: 1199px)" srcset="@item.MobileImage" />
+                                                <img src="@item.PCImage" class="c-gridview__img" alt="">
+                                            </picture>
+                                        </div>
+                                    }
 
-                                <div class="c-gridview__content">
-                                    <div class="c-gridview__main">
-                                        @if (!string.IsNullOrEmpty(item.Title))
-                                        {
-                                            <div class="c-gridview__title t2@dt-only u-ellipsis-2 u-ellipsis-3@mb-only">@item.Title</div>
-                                        }
+                                    <div class="c-gridview__content">
+                                        <div class="c-gridview__main">
+                                            @if (!string.IsNullOrEmpty(item.Title))
+                                            {
+                                                <div class="c-gridview__title t2@dt-only u-ellipsis-2 u-ellipsis-3@mb-only">@item.Title</div>
+                                            }
 
-                                        @if (!string.IsNullOrEmpty(item.Content))
-                                        {
-                                            <div class="c-gridview__desc u-ellipsis-2 u-hidden@lt u-important">@item.Content</div>
-                                        }
-                                    </div>
+                                            @if (!string.IsNullOrEmpty(item.Content))
+                                            {
+                                                <div class="c-gridview__desc u-ellipsis-2 u-hidden@lt u-important">@item.Content</div>
+                                            }
+                                        </div>
 
-                                    <div class="c-gridview__minor">
-                                        <div class="c-minorInfo s4">
-                                            <div class="c-minorInfo__main">
+                                        <div class="c-gridview__minor">
+                                            <div class="c-minorInfo s4">
+                                                <div class="c-minorInfo__main">
 
-                                                @if (!string.IsNullOrEmpty(item.Date))
-                                                {
-                                                    <span class="t-date">@item.Date</span>
-                                                }
+                                                    @if (!string.IsNullOrEmpty(item.Date))
+                                                    {
+                                                        <span class="t-date">@item.Date</span>
+                                                    }
 
-                                            </div>
-                                            <div class="c-minorInfo__view">
+                                                </div>
+                                                <div class="c-minorInfo__view">
 
-                                                @if (!string.IsNullOrEmpty(item.Link))
-                                                {
-                                                    <span class="o-views o-views--xs"></span>
-                                                }
+                                                    @if (!string.IsNullOrEmpty(item.ViewCount))
+                                                    {
+                                                        <span class="o-views o-views--xs">@item.ViewCount</span>
+                                                    }
 
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        @Html.Sitecore().EndField()
+                        </a>
 
                     </div>
                 }
@@ -83,34 +83,3 @@
         </div>
     </div>
 </section>
-
-<script>
-(function ($, window, document, undefined) {
-    $(document).ready(function () {
-        $('[articlecardlist] .l-flex__item[targetitemid]').each(function (index, element) {
-            var targetItemId = $(element).attr('targetitemid');
-            var targetUrl = window.location.origin + $(element).find('a').attr('href');
-
-            $.ajax({
-                type: "POST",
-                url: '@ClientRoute.GenerateUrl(this, "ViewCount", "GetViewCount")',
-                data: {
-                    pageItemId: targetItemId,
-                    currentUrl: targetUrl
-                },
-                success: function (res) {
-                    if (res.success) {
-                        var viewCount = res.viewCount;
-                        $('[targetitemid="' + targetItemId + '"]').find('.o-views').text(viewCount);
-                    } else {
-                        console.error("Error: " + res.message);
-                    }
-                },
-                error: function (xhr, status, error) {
-                    console.error("AJAX error: " + error);
-                }
-            });
-        });
-    });
-})(jQuery, window, document);
-</script>
