--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
@@ -72,21 +72,19 @@
 <script>
     (function ($, window, document, undefined) {
         document.addEventListener('DOMContentLoaded', function () {
-            var pageItemId = '@Sitecore.Context.Item.ID.ToString()';
-            var currentUrl = window.location.href;
+            let params = {
+                pageId: '@Sitecore.Context.Item.ID.ToString()',
+                url: new URL(location.href).href.replace(/%7B/g, '{').replace(/%7D/g, '}'),
+                querystring: ['id=' + new URL(location.href).searchParams.get('id')]
+            };
 
             $.ajax({
                 type: "POST",
-                url: '@ClientRoute.GenerateUrl(this, "ViewCount", "UpdateViewCount")',
-                data: {
-                    pageItemId: pageItemId,
-                    currentUrl: currentUrl
-                },
+                url: '@ClientRoute.GenerateUrl(this, "VisitCount", "Update")',
+                data: params,
                 success: function (res) {
-                    if (res.success) {
-                        var viewCount = res.viewCount;
-
-                        $("#articleViewCount").text(viewCount);
+                    if (res.Status == "Success") {
+                        $("#articleViewCount").text(res.Count);
                     } else {
                         console.error("Error: " + res.message);
                     }
