--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/RelatedArticles/RelatedArticles.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/RelatedArticles/RelatedArticles.cshtml
@@ -19,56 +19,56 @@
                 <div class="l-flex u-flex-col@lt u-flex-gap-xl u-flex-gap-sm@lt" relatedArticles>
                     @foreach (var item in Model.CardList)
                     {
-                        <div class="l-flex__item" targetItemId="@item.TargetItemID">
-                            @Html.Sitecore().BeginField(Templates.ArticleCardItem.Fields.Link.ToString(), item.Item, new { haschildren = true, @class = "c-box c-box--gapless u-shadow-animation" })
+                        <div class="l-flex__item">
 
-                            <div class="c-box c-box--gapless u-shadow-animation">
-                                <div class="c-gridview c-gridview--list@lt">
-                                    @if (!string.IsNullOrEmpty(item.PCImage) && !string.IsNullOrEmpty(item.MobileImage))
-                                    {
-                                        <div class="c-gridview__media c-gridview__media--sm">
-                                            <picture>
-                                                <source media="(min-width: 1200px)" srcset="@item.PCImage" />
-                                                <source media="(max-width: 1199px)" srcset="@item.MobileImage" />
-                                                <img src="@item.PCImage" class="c-gridview__img" alt="女性財務焦慮感高於男性？富達：三步驟翻轉「投資好難」盲點">
-                                            </picture>
-                                        </div>
-                                    }
-
-                                    <div class="c-gridview__content">
-
-                                        @if (!string.IsNullOrEmpty(item.Title))
+                            <a href="@item.Link" class="c-box c-box--gapless u-shadow-animation" target="@item.LinkTarget" title="@item.LinkTitle">
+                                <div class="c-box c-box--gapless u-shadow-animation">
+                                    <div class="c-gridview c-gridview--list@lt">
+                                        @if (!string.IsNullOrEmpty(item.PCImage) && !string.IsNullOrEmpty(item.MobileImage))
                                         {
-                                            <div class="c-gridview__main">
-                                                <div class="c-gridview__title s3@dt-only u-ellipsis-2 u-ellipsis-3@mb-only u-line-2@dt-only">@item.Title</div>
+                                            <div class="c-gridview__media c-gridview__media--sm">
+                                                <picture>
+                                                    <source media="(min-width: 1200px)" srcset="@item.PCImage" />
+                                                    <source media="(max-width: 1199px)" srcset="@item.MobileImage" />
+                                                    <img src="@item.PCImage" class="c-gridview__img" alt="女性財務焦慮感高於男性？富達：三步驟翻轉「投資好難」盲點">
+                                                </picture>
                                             </div>
                                         }
 
-                                        <div class="c-gridview__minor">
-                                            <div class="c-minorInfo s4">
-                                                <div class="c-minorInfo__main">
+                                        <div class="c-gridview__content">
 
-                                                    @if (!string.IsNullOrEmpty(item.Date))
-                                                    {
-                                                        <span class="t-date">@item.Date</span>
-                                                    }
-
+                                            @if (!string.IsNullOrEmpty(item.Title))
+                                            {
+                                                <div class="c-gridview__main">
+                                                    <div class="c-gridview__title s3@dt-only u-ellipsis-2 u-ellipsis-3@mb-only u-line-2@dt-only">@item.Title</div>
                                                 </div>
-                                                <div class="c-minorInfo__view">
+                                            }
 
-                                                    @if (!string.IsNullOrEmpty(item.Link))
-                                                    {
-                                                        <span class="o-views o-views--xs"></span>
-                                                    }
+                                            <div class="c-gridview__minor">
+                                                <div class="c-minorInfo s4">
+                                                    <div class="c-minorInfo__main">
 
+                                                        @if (!string.IsNullOrEmpty(item.Date))
+                                                        {
+                                                            <span class="t-date">@item.Date</span>
+                                                        }
+
+                                                    </div>
+                                                    <div class="c-minorInfo__view">
+
+                                                        @if (!string.IsNullOrEmpty(item.ViewCount))
+                                                        {
+                                                            <span class="o-views o-views--xs">@item.ViewCount</span>
+                                                        }
+
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </a>
 
-                            @Html.Sitecore().EndField()
                         </div>
                     }
                 </div>
@@ -76,34 +76,3 @@
         </section>
     </div>
 </section>
-
-<script>
-(function ($, window, document, undefined) {
-    $(document).ready(function () {
-        $('[relatedArticles] .l-flex__item[targetitemid]').each(function (index, element) {
-            var targetItemId = $(element).attr('targetitemid');
-            var targetUrl = window.location.origin +$(element).find('a').attr('href');
-
-            $.ajax({
-                type: "POST",
-                url: '@ClientRoute.GenerateUrl(this, "ViewCount", "GetViewCount")',
-                data: {
-                    pageItemId: targetItemId,
-                    currentUrl: targetUrl
-                },
-                success: function (res) {
-                    if (res.success) {
-                        var viewCount = res.viewCount;
-                        $('[targetitemid="' + targetItemId + '"]').find('.o-views').text(viewCount);
-                    } else {
-                        console.error("Error: " + res.message);
-                    }
-                },
-                error: function (xhr, status, error) {
-                    console.error("AJAX error: " + error);
-                }
-            });
-        });
-    });
-})(jQuery, window, document);
-</script>
