update: 登入元件加入行動裝置接口 update: 調整apppay相關config Fix: 基金詳細頁移除分享區塊

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
@@ -15,3 +15,8 @@ else
 {
     Html.RenderPartial("~/Views/Feature/Wealth/Component/HeaderWidget/_LogoutState.cshtml");
 }
+<script>
+@{
+@:addObjectValue(SC_DATA, 'LoginStatus', '@ViewData["LoginStatus"]');
+}
+</script>
