--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LogoutState.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LogoutState.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="l-header__tools">
+﻿
+<div class="l-header__tools">
     <div class="l-topbar">
         <div class="l-topbar__login">
             <!--未登入狀態 電腦版-->
